--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,8 +1,9 @@
 // Base styling for the navbar
 #mainNav {
   box-shadow: $box-shadow;
-  background-color: $white;
+  background-color: $gray-900;
   transition: background-color 0.2s ease;
+
   .navbar-brand {
     font-family: $font-family-sans-serif;
     font-weight: $font-weight-bold;
@@ -16,10 +17,12 @@
         font-weight: $font-weight-bold;
         font-size: 0.9rem;
         padding: 0.75rem 0;
+
         &:hover,
         &:active {
           color: $primary;
         }
+
         &.active {
           color: $primary !important;
         }
@@ -30,8 +33,10 @@
     // Base styling for the navbar - screen sizes greater than the large breakpoint
     box-shadow: none;
     background-color: transparent;
+
     .navbar-brand {
       color: fade-out($white, .3);
+
       &:hover {
         color: $white;
       }
@@ -41,10 +46,12 @@
         .nav-link {
           color: fade-out($white, .3);
           padding: 0 1rem;
+
           &:hover {
             color: $white;
           }
         }
+
         &:last-child {
           .nav-link {
             padding-right: 0;
@@ -55,9 +62,11 @@
     // Navbar styling applied when the page is scrolled
     &.navbar-scrolled {
       box-shadow: $box-shadow;
-      background-color: $white;
+      background-color: rgba(darken($gray-theme, 10%), 0.9);
+
       .navbar-brand {
-        color: $gray-900;
+        color: fade-out($white, .3);
+
         &:hover {
           color: $primary;
         }
@@ -65,7 +74,8 @@
       .navbar-nav {
         .nav-item {
           .nav-link {
-            color: $gray-900;
+            color: fade-out($white, .3);
+
             &:hover {
               color: $primary;
             }
