--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -1,10 +1,12 @@
-// Styling for the portfolio section
-#portfolio {
+// Styling for the ingredients section
+.ingredients {
   .container-fluid {
     max-width: 1920px;
+
     .portfolio-box {
       position: relative;
       display: block;
+
       .portfolio-box-caption {
         display: flex;
         align-items: center;
@@ -21,19 +23,21 @@
         opacity: 0;
 
         color: $white;
-        background: fade-out($primary, .1);
+        background: fade-out($orange, .1);
         transition: opacity 0.25s ease;
-        text-align: center;
+
         .project-category {
           font-family: $font-family-sans-serif;
           font-size: 0.85rem;
           font-weight: 600;
           text-transform: uppercase;
         }
+
         .project-name {
           font-size: 1.2rem;
         }
       }
+
       &:hover {
         .portfolio-box-caption {
           opacity: 1;
