--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,10 +4,11 @@
 
 // Set a custom color
 $orange: #f4623a !default;
-$brown: #5c4d42 !default;
+$brown: #a3875b !default;
+$gray-theme: #313131;
 
-// Set primary color to orange
-$primary: $orange !default;
+// Set primary color to brown
+$primary: $brown !default;
 
 // Font overrides
 $font-family-sans-serif: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji' !default;
