--- a/scss/_bitters.scss
+++ b/scss/_bitters.scss
@@ -53,13 +53,12 @@ hr.no-line {
 
 .info1 p {
   font-family: $font-family-sans-serif;
-  font-size: 13px;
+  font-size: 0.9rem;
   color: #989898;
 }
 
 .info1 p.highlighted {
   font-family: $font-family-sans-serif;
-  font-size: 0.9rem;
   color: #a3845b;
 }
 
@@ -84,15 +83,16 @@ hr.no-line {
   background-image: url("../img/backgrounds/section-header.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
 }
 
 .info3 a.btn.btn-light {
-  background-color: #a3845b;
+  background-color: $brown;
   color: #fff;
 }
 
 .info3 a.btn.btn-light:hover {
-  background-color: #99784d;
+  background-color: darken($brown, 5%);
   color: #fff;
 }
 
