--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -9,6 +9,10 @@ header.masthead {
     font-family: "Noto Serif", serif;
   }
 
+  .btn {
+    min-width: 50%;
+  }
+
   @include media-breakpoint-up(lg) {
     height: 100vh;
     min-height: 40rem;
