--- a/css/creative.css
+++ b/css/creative.css
@@ -9694,12 +9694,12 @@ header.masthead .btn {
   max-width: 1920px;
 }
 
-.ingredients .container-fluid .portfolio-box {
+.ingredients .container-fluid .ingredient-box {
   position: relative;
   display: block;
 }
 
-.ingredients .container-fluid .portfolio-box .portfolio-box-caption {
+.ingredients .container-fluid .ingredient-box .ingredient-box-caption {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -9715,18 +9715,18 @@ header.masthead .btn {
   transition: opacity 0.25s ease;
 }
 
-.ingredients .container-fluid .portfolio-box .portfolio-box-caption .project-category {
+.ingredients .container-fluid .ingredient-box .ingredient-box-caption .ingredient-name {
   font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 0.85rem;
+  font-size: 1.2rem;
   font-weight: 600;
   text-transform: uppercase;
 }
 
-.ingredients .container-fluid .portfolio-box .portfolio-box-caption .project-name {
-  font-size: 1.2rem;
+.ingredients .container-fluid .ingredient-box .ingredient-box-caption .ingredient-description {
+  font-size: 0.9rem;
 }
 
-.ingredients .container-fluid .portfolio-box:hover .portfolio-box-caption {
+.ingredients .container-fluid .ingredient-box:hover .ingredient-box-caption {
   opacity: 1;
 }
 
