--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -3,11 +3,11 @@
   .container-fluid {
     max-width: 1920px;
 
-    .portfolio-box {
+    .ingredient-box {
       position: relative;
       display: block;
 
-      .portfolio-box-caption {
+      .ingredient-box-caption {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -26,20 +26,20 @@
         background: fade-out($orange, .1);
         transition: opacity 0.25s ease;
 
-        .project-category {
+        .ingredient-name {
           font-family: $font-family-sans-serif;
-          font-size: 0.85rem;
+          font-size: 1.2rem;
           font-weight: 600;
           text-transform: uppercase;
         }
 
-        .project-name {
-          font-size: 1.2rem;
+        .ingredient-description {
+          font-size: 0.9rem;
         }
       }
 
       &:hover {
-        .portfolio-box-caption {
+        .ingredient-box-caption {
           opacity: 1;
         }
       }
