--- a/scss/_bitters.scss
+++ b/scss/_bitters.scss
@@ -107,6 +107,10 @@ hr.no-line {
   }
 }
 
+a.preview:hover {
+  background-color: red;
+}
+
 q {
   color: #ddd;
   font-family: $font-family-sans-serif;
