--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -1,5 +1,5 @@
 // Styling for the ingredients section
-.ingredients {
+//.ingredients {
   .container-fluid {
     max-width: 1920px;
 
@@ -45,4 +45,4 @@
       }
     }
   }
-}
+//}
