--- a/css/creative.css
+++ b/css/creative.css
@@ -9928,3 +9928,10 @@ section.bitter i.fas.heading {
 .ratings {
   color: #323232;
 }
+
+#impressum .business-card {
+  background-image: url("../img/opengraph-preview.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
