--- a/scss/_bitters.scss
+++ b/scss/_bitters.scss
@@ -96,7 +96,7 @@ hr.no-line {
   color: #fff;
 }
 
-#bitter-1 .map, #bitter-2 .map {
+.bitter .map {
   background-color: #595959;
   background-image: url("../img/maps/map.jpg");
   background-repeat: no-repeat;
