--- a/scss/creative.scss
+++ b/scss/creative.scss
@@ -10,4 +10,5 @@
 @import "./masthead.scss";
 @import "./portfolio.scss";
 @import "./bitters.scss";
+@import "./recipes.scss";
 @import "./imprint.scss";
