--- a/css/creative.css
+++ b/css/creative.css
@@ -9557,6 +9557,10 @@ html {
   color: rgba(255, 255, 255, 0.75);
 }
 
+blockquote {
+  font-style: italic;
+}
+
 hr.divider {
   max-width: 3.25rem;
   border-width: 0.2rem;
