--- a/css/creative.css
+++ b/css/creative.css
@@ -9763,6 +9763,16 @@ header.masthead .btn {
   background-image: url("../img/products/bottle-half.png");
   background-repeat: no-repeat;
   background-position: left;
+  background-size: 200px;
+}
+
+.overlayed {
+  background-color: rgba(49, 49, 49, 0.6);
+  -webkit-backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px);
+  border-radius: 5px;
+  padding-left: 1rem;
+  padding-bottom: 0.3rem;
 }
 
 .info1 h2 {
